# Simple-Aimer-Runtime

./: .gitignore  CMakeLists.txt  README.md  autoaim移植.md  detectortest.py  imgui.ini
applications/auto_aim/: AutoAimProvider.cpp  AutoAimProvider.hpp  AutoAimSelector.hpp  AutoAimSolver.cpp  AutoAimSolver.hpp  AutoAimSystem.cpp  AutoAimSystem.hpp  CMakeLists.txt  GimbalActuator.cpp  GimbalActuator.hpp  MANUAL.md  main.cpp  types.cpp  types.hpp
applications/auto_aim/AutoAimProvider/: AutoAimProvider.cpp  AutoAimProvider.hpp  classifier.cpp  classifier.hpp  detector.cpp  detector.hpp  pnp_solver.cpp  pnp_solver.hpp  yolo.hpp
applications/auto_aim/AutoAimProvider/io/: camera.cpp  cboard.cpp  cboard.hpp  socketcan.hpp
applications/auto_aim/AutoAimProvider/io/dm_imu/: dm_imu.hpp
applications/auto_aim/AutoAimProvider/io/gimbal/: gimbal.hpp
applications/auto_aim/AutoAimProvider/io/ros2/: publish2nav.cpp  subscribe2nav.hpp
applications/auto_aim/AutoAimProvider/io/usbcamera/: usbcamera.hpp
applications/auto_aim/AutoAimProvider/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
applications/auto_aim/configs/: standard4.yaml
applications/auto_aim/io/dm_imu/: dm_imu.cpp
applications/auto_aim/io/gimbal/: gimbal.cpp
applications/auto_aim/io/hikrobot/: hikrobot.cpp
applications/auto_aim/io/mindvision/: mindvision.cpp  mindvision.hpp
applications/auto_aim/io/usbcamera/: usbcamera.cpp
applications/auto_aim/tools/: yaml.hpp
applications/laser_aimer/: CMakeLists.txt  LaserAimerActuator.cpp  LaserAimerActuator.hpp  LaserAimerProvider.cpp  LaserAimerProvider.hpp  LaserAimerSelector.cpp  LaserAimerSelector.hpp  LaserAimerSolver.cpp  LaserAimerSolver.hpp  LaserAimerSystem.cpp  LaserAimerSystem.hpp  MANUAL.md  calibrate_boresight_uv.py  config.cpp  config.hpp  control.yaml  main.cpp  types.cpp  types.hpp
applications/laser_aimer/camera/: FrameSource.cpp  FrameSource.hpp  MindVisionCamera.cpp  MindVisionCamera.hpp
applications/laser_aimer/configs/: laser_aimer.yaml
applications/laser_aimer/control/: Controller.cpp  Controller.hpp
applications/laser_aimer/detector/: DroneDetector.cpp  DroneDetector.hpp  FixedTargetDetector.cpp  FixedTargetDetector.hpp
applications/laser_aimer/io/: GimbalSerial.cpp  GimbalSerial.hpp
include/core/: DebugContext.hpp  FrameTimer.hpp  Registry.hpp  types.hpp
include/debug/: AimerCurve.hpp  AimerImage.hpp  AimerLogger.hpp  ImGuiDebugger.hpp
include/pipeline/: Actuator.hpp  Command.hpp  DataProvider.hpp  FinalTargetState.hpp  Selector.hpp  Solver.hpp  System.hpp
include/runtime/: Runtime.hpp
include/tools/: extended_kalman_filter.hpp  tinympc_solver.hpp  trajectory.hpp
src/debug/: AimerCurve.cpp  AimerImage.cpp  AimerLogger.cpp  ImGuiDebugger.cpp
src/tools/: extended_kalman_filter.cpp  tinympc_solver.cpp
